# stm32_cubemx_sd_card

./: .gitmodules
components/sd_card/: CMakeLists.txt  sd_card.c  sd_card.h  sd_card_config.h
cubemx/: .mxproject  cubemx.ioc
cubemx/Core/Inc/: main.h
cubemx/Core/Src/: gpio.c  main.c
cubemx/cmake/stm32cubemx/: CMakeLists.txt
main/: CMakeLists.txt  main.c
requirements/: submodules.txt
