add_library(sd_card STATIC)

target_sources(sd_card PRIVATE 
    sd_card.c
)

target_include_directories(sd_card PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}
)

target_link_libraries(sd_card PUBLIC
    stm32cubemx
)

target_compile_options(sd_card PUBLIC
    -std=c23
    -Wall
    -Wextra
    -Wconversion
    -Wshadow
    -Wpedantic
    -Wnarrowing
    -Waddress
    -pedantic
    -Wdeprecated
    -Wsign-conversion
    -Wduplicated-cond
    -Wduplicated-branches
    -Wlogical-op
    -Wnull-dereference
    -Wdouble-promotion
    -Wimplicit-fallthrough
    -Wcast-align
    -Wformat=2
    -Wformat-security
    -Wmissing-prototypes
    -Wmissing-declarations
    -Wstrict-prototypes
    -Wold-style-definition
    -Wundef
    -Wvla
    -Wpointer-arith
    -Wstrict-aliasing=2
)